fix status
